Update projects section

--- a/index.html
+++ b/index.html
@@ -50,10 +50,24 @@
 							</header>
 						</div>
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/water.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
+									<h2>Amathus VR Dive project</h2>
+									<p>Virtual Exploration of the Ancient Port of Amathus: Creating Lifelike
+										Underwater Environments with Procedural Generation and Artificial
+										Intelligence</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#"  class="image" style="border-radius: 70%; "><img src="images/biomedicasl.jpg"  alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>C.I.M Biomedical Warehouse Stock Tracker</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -62,11 +76,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/astrapi1.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Louis Alexandrou Model Airplanes</h2>
+									<p>A website showcasing the work and projects of Louis Alexandrou, a model airplane designer.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -74,11 +88,23 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/covid_simulator.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/covid_sim.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Covid Simulation</h2>
 									<p>A simulation program that models the process of transmitting a virus to a set of individuals through personal contact or contact with infected areas.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/h2i.png"  alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>How2Internet</h2>
+									<p>an educational game,consisting 5 levels about dangers in the online world, developed at 2017 by team CRAZY JUMP (logo designed by me) which i was a part of.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
