--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Andreas Alexandrou</h1>
-							<p>A HIGHLY MOTIVATED, SELF-STARTER, LOOKING FOR AN OPPORTUNITY TO APPLY AND EXPAND HIS KNOWLEDGE AND SKILLS</p>
+							<h1 id="headerr" style="word-spacing: 20px; ">Andreas Alexandrou</h1>
+							<p ><span id="ii" class="type" style="--n:110">A highly motivated, self-starter, looking for an opportunity to apply and expand his knowlage and skills</span></p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -221,7 +221,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
