Covid simulation page Update

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 							</header>
 						</div>
 						<section>
+							<a href="#"  class="image" style="border-radius: 0%; "><img src="images/water.png"  alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Amathus VR Dive project</h2>
@@ -63,7 +64,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#"  class="image" style="border-radius: 70%; "><img src="images/biomedicasl.jpg"  alt="" data-position="center center" /></a>
+							<a href="#"  class="image" style="border-radius: 0%; "><img src="images/biomedicasl.jpg"  alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>C.I.M Biomedical Warehouse Stock Tracker</h2>
@@ -93,7 +94,7 @@
 									<h2>Covid Simulation</h2>
 									<p>A simulation program that models the process of transmitting a virus to a set of individuals through personal contact or contact with infected areas.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="covidSim.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -105,7 +106,7 @@
 									<h2>How2Internet</h2>
 									<p>an educational game,consisting 5 levels about dangers in the online world, developed at 2017 by team CRAZY JUMP (logo designed by me) which i was a part of.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="h2i.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
