airplane model section updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<h2>Louis Alexandrou Model Airplanes</h2>
 									<p>A website showcasing the work and projects of Louis Alexandrou, a model airplane designer.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="AirplaneModels.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
