--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									<h2>C.I.M Biomedical Warehouse Stock Tracker</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="CIM.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
