--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										Underwater Environments with Procedural Generation and Artificial
 										Intelligence</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="Amathus.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
