--- a/CIM.html
+++ b/CIM.html
@@ -21,6 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="index.html#one" >Projects</a></li>
+						<li><a href="index.html#two" >About me</a></li>
 						<li><a href="index.html#three">Contact Me</a></li>
 					</ul>
 				</nav>
