--- a/Amathus.html
+++ b/Amathus.html
@@ -42,7 +42,7 @@
 							<a class="next" onclick="plusSlides(1)">❯</a>
 							</div>		
 							<div class="inner3" style="position: relative; display: inline-block;">
-								<span class="image fit"><img src="images/astrapi1.JPG"  alt="" /></span>
+								<span class="image fit"><img src="images/turtle.png"  alt="" /></span>
 								<a class="prev" onclick="plusSlides(-1)">❮</a>
 							<a class="next" onclick="plusSlides(1)">❯</a>
 						
