--- a/h2i.html
+++ b/h2i.html
@@ -34,7 +34,26 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">How2Internet</h1>
-							<span class="image fit"><img src="images/h2i1.png"  alt="" /></span>
+							<div class="inner3" style="position: relative; display: inline-block;">
+								<span class="image fit"><img src="images/h2i1.png"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
+							</div>		
+							<div class="inner3" style="position: relative; display: inline-block;">
+								<span class="image fit"><img src="images/h2i2.jpg"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
+								</div>
+							<div class="inner3" style="position: relative; display: inline-block;">
+								<span class="image fit"><img src="images/h2i3.png"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
+								</div>
+							<div class="inner3" style="position: relative; display: inline-block;">
+								<span class="image fit"><img src="images/h2i4.png"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
+								</div>
 							<p>I am proud to showcase a significant achievement from my high school years, where my team, CRAZY JUMP, represented our school
 								 in the esteemed Logipaignion 2017. The Logipaignion was an educational game contest organized by the University of Cyprus. 
 								 Out of numerous participants, our team's entry, "how2internet," secured an impressive 2nd place. As a valued member of CRAZY JUMP, 
@@ -88,4 +107,47 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+	<!-- SLIDESHOW -->
+	<style>
+
+				
+		
+	</style>
+	</head>
+	<body>
+	
+
+	
+	
+	
+	<script>
+	let slideIndex = 1;
+	showSlides(slideIndex);
+	
+	function plusSlides(n) {
+	  showSlides(slideIndex += n);
+	}
+	
+	function currentSlide(n) {
+	  showSlides(slideIndex = n);
+	}
+	
+	function showSlides(n) {
+	  let i;
+	  let slides = document.getElementsByClassName("inner3");
+	  let dots = document.getElementsByClassName("dot");
+	  if (n > slides.length) {slideIndex = 1}    
+	  if (n < 1) {slideIndex = slides.length}
+	  for (i = 0; i < slides.length; i++) {
+		slides[i].style.display = "none";  
+	  }
+	  for (i = 0; i < dots.length; i++) {
+		dots[i].className = dots[i].className.replace(" active", "");
+	  }
+	  slides[slideIndex-1].style.display = "block";  
+	  dots[slideIndex-1].className += " active";
+	}
+	</script>
+
+
 </html>
