--- a/Amathus.html
+++ b/Amathus.html
@@ -37,17 +37,25 @@
 						<div class="inner">
 							<h1 class="major">Amathus VR Dive project</h1>
 							<div class="inner3" style="position: relative; display: inline-block;">
-							<span class="image fit"><img src="images/water.png"  alt="" /></span>
-							<a class="prev" onclick="plusSlides(-1)">❮</a>
-							<a class="next" onclick="plusSlides(1)">❯</a>
+								<span class="image fit"><img src="images/water.png"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
 							</div>		
 							<div class="inner3" style="position: relative; display: inline-block;">
-								<span class="image fit"><img src="images/turtle.png"  alt="" /></span>
+								<span class="image fit"><img src="images/turtle1.png"  alt="" /></span>
 								<a class="prev" onclick="plusSlides(-1)">❮</a>
-							<a class="next" onclick="plusSlides(1)">❯</a>
-						
-								</div>
-								
+								<a class="next" onclick="plusSlides(1)">❯</a>
+							</div>
+							<div class="inner3" style="position: relative; display: inline-block;">
+								<span class="image fit"><img src="images/amathus3.png"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
+							</div>
+							<div class="inner3" style="position: relative; display: inline-block;">
+								<span class="image fit"><img src="images/amathus4.png"  alt="" /></span>
+								<a class="prev" onclick="plusSlides(-1)">❮</a>
+								<a class="next" onclick="plusSlides(1)">❯</a>
+							</div>
 							<h4>Introduction</h4>
 							<p>Virtual reality (VR) presents a transformative technology for underwater exploration, offering immersive experiences without the limitations and risks of physical scuba diving. This project proposes an innovative application of VR to explore underwater environments, focusing specifically on the ancient port of Amathus. By employing procedural generation techniques and artificial intelligence algorithms, the project aims to create a more immersive and realistic virtual underwater environment.</h4>
 							<h4>Procedural Generation of Underwater Vegetation</h4>
