--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="https://formsubmit.co/46c6f2c0537093bd19858432c077a009" method="POST">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
