--- a/Amathus.html
+++ b/Amathus.html
@@ -90,10 +90,14 @@
 			  </style>
 		
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			<footer id="footer" class="wrapper alt" >
+				<div class="inner" style="display: flex; justify-content: center;" >
+					<ul class="menu" >
+						<li><span class="label">Check Me Out</span></li>
+						<li><a href="https://github.com/aalexa201222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								
+						<li><a href="https://linkedin.com/in/andreas-alexandrou-056528242" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<!-- <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
