Fixing the footer and grammatical mistakes

--- a/AirplaneModels.html
+++ b/AirplaneModels.html
@@ -52,8 +52,8 @@
 						
 							</div>
 							<h4>Introduction</h4>
-							<p>This website serves as a comprehensive showcase of Louis' impressive background, highlighting his expertise in the fiel
-								d and allowing visitors to explore his exceptional projects. With engaging animations and a user-friendly interface, this
+							<p>This website serves as a comprehensive showcase of Louis' impressive background, highlighting his expertise in the field
+								 and allowing visitors to explore his exceptional projects. With engaging animations and a user-friendly interface, this
 								 website provides an immersive and seamless browsing experience.</p>
 							<h4>About Louis Alexandrou</h4>
 							<p>Louis Alexandrou is a highly skilled and passionate model airplane designer, known for his meticulous craftsmanship and
@@ -76,22 +76,24 @@
 							  </ul>
 						</div>
 						<div class="inner" id="inner1">
-							<h2 class="major">Sourse Code</h2>
+							<h2 class="major">Source Code</h2>
 							<a href="https://github.com/aalexa201222/aalexa201222.github.io">github link</a>
 						</div>
 					</section>
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			<footer id="footer" class="wrapper alt" >
+				<div class="inner" style="display: flex; justify-content: center;" >
+					<ul class="menu" >
+						<li><span class="label">Check Me Out</span></li>
+						<li><a href="https://github.com/aalexa201222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								
+						<li><a href="https://linkedin.com/in/andreas-alexandrou-056528242" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<!-- <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
