--- a/Amathus.html
+++ b/Amathus.html
@@ -79,7 +79,8 @@
 						</div>
 						<div class="inner" id="inner1">
 							<h2 class="major">Download</h2>
-							<a href="https://github.com/aalexa201222/aalexa201222.github.io">github link</a>
+							<p>Currently unavailable</p>
+							<!-- <a href="https://github.com/aalexa201222/aalexa201222.github.io">github link</a> -->
 						</div>
 					</section>
 
