--- a/covidSim.html
+++ b/covidSim.html
@@ -53,7 +53,7 @@
 							</div>
 							
 							<h4>Introduction</h4>
-							<p>Covid simulation rpoject showcase my Java programming skills and demonstrates my understanding of virus transmission dynamics. The COVID Simulation project
+							<p>Covid simulation project showcase my Java programming skills and demonstrates my understanding of virus transmission dynamics. The COVID Simulation project
 								 is a powerful Java-based program designed to simulate the spread of a virus among individuals within various areas. By providing a visual 
 								 representation of virus transmission through personal contact and contact with infected areas, this simulation offers valuable insights 
 								 into the dynamics of viral spread and the effectiveness of preventive measures.</p>
@@ -63,7 +63,7 @@
 								across different areas. With the ability to set transmission probabilities and define the number of people, infected individuals,
 								 immune individuals, and area dimensions, users can tailor the simulation to specific scenarios and observe the outcome in real-time.</p>
 							<h4>Simulation Mechanics</h4>
-							<p>TThe simulation operates by generating a virtual environment populated by individuals in various states—healthy, infected, and immune.
+							<p>The simulation operates by generating a virtual environment populated by individuals in various states—healthy, infected, and immune.
 								 These individuals move within the designated areas, interacting with one another and their surroundings. By simulating personal contact
 								  and contact with infected areas, the program accurately represents the mechanisms of virus transmission. Users can specify the duration
 								   of the simulation, allowing for observation of the progression of the virus over time.</p>
@@ -74,7 +74,7 @@
 								  and area dimensions, users can simulate a wide range of scenarios and study the impact of different variables
 								   on the spread of the virus.</p>	 
 							<h4>Visual Representation and Analysis</h4>		   
-							<p>The simulation provides a captivating visual representation of the spread of the virus, allowing
+							<p>The simulation with the help of std library provides a captivating visual representation of the spread of the virus, allowing
 								 users to observe the interactions between individuals and areas in real-time. At the end of the
 								  simulation, a comprehensive report is generated, detailing the final count of healthy, infected, 
 								  and immune individuals in each area. This information is invaluable for analyzing the effectiveness of
@@ -88,18 +88,21 @@
 							  </ul>
 						</div>
 						<div class="inner" id="inner1">
-							<h2 class="major">Sourse Code</h2>
+							<h2 class="major">Source Code</h2>
 							<a href="https://github.com/aalexa201222/covid-simulation">github link</a>
 						</div>
 					</section>
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			<footer id="footer" class="wrapper alt" >
+				<div class="inner" style="display: flex; justify-content: center;" >
+					<ul class="menu" >
+						<li><span class="label">Check Me Out</span></li>
+						<li><a href="https://github.com/aalexa201222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								
+						<li><a href="https://linkedin.com/in/andreas-alexandrou-056528242" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<!-- <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
