--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/Saini.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/Saini.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Louis Alexandrou Model Airplanes</h2>
