--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/astrapi1.jpg" alt="" data-position="center center" /></a>
+							<a href="#"  class="image" style="border-radius: 0%; "><img src="images/water.png"  alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Louis Alexandrou Model Airplanes</h2>
@@ -146,8 +146,8 @@
 									</ul>
 									<h4>Cyprus Military Service, Astromeritis, Nicosia</h4>
 									<ul>
-										<li>Created an application using Microsoft Power Apps allowing users to choose their
-										department and corresponding training/sessions.</li>
+										<li>Completed a 14-month term of military service as a Corporal, successfully fulfilling my
+											army duties.</li>
 									</ul>
 								
 										
