--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 id="headerr" style="word-spacing: 20px; ">Andreas Alexandrou</h1>
-							<p ><span id="ii" class="type" style="--n:110">A highly motivated Artificial Intelligence Master's degree student, looking for an opportunity to apply and expand his knowlage and skills.</span></p>
+							<p ><span id="ii" class="type" style="--n:110">A highly motivated Artificial Intelligence Master's degree student, looking for an opportunity to apply and expand his knowledge and skills.</span></p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Learn more</a></li>
 							</ul>
