--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<!-- <title>Hyperspace by HTML5 UP</title> -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,7 +50,7 @@
 							</header>
 						</div>
 						<section>
-							<a href="#"  class="image" style="border-radius: 0%; "><img src="images/water.png"  alt="" data-position="center center" /></a>
+							<a href="Amathus.html"  class="image" style="border-radius: 0%; "><img src="images/water.png"  alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Amathus VR Dive project</h2>
@@ -64,7 +64,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#"  class="image" style="border-radius: 0%; "><img src="images/biomedicasl.jpg"  alt="" data-position="center center" /></a>
+							<a href="CIM.html"  class="image" style="border-radius: 0%; "><img src="images/biomedicasl.jpg"  alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>C.I.M Biomedical Warehouse Stock Tracker</h2>
@@ -76,7 +76,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/astrapi1.jpg" alt="" data-position="center center" /></a>
+							<a href="AirplaneModels.html" class="image"><img src="images/astrapi1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Louis Alexandrou Model Airplanes</h2>
@@ -88,7 +88,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/covid_sim.png" alt="" data-position="25% 25%" /></a>
+							<a href="covidSim.html" class="image"><img src="images/covid_sim.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Covid Simulation</h2>
@@ -100,7 +100,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/h2i.png"  alt="" data-position="25% 25%" /></a>
+							<a href="h2i.html" class="image"><img src="images/h2i.png"  alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>How2Internet</h2>
