--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>Protagorou 10, Lakatamia, Nicosia, Cyprus, 2323<br />
+											<span>Protagorou 10, Nicosia, Cyprus, 2323<br />
 											
 										</li>
 										<li>
