--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>C.I.M Biomedical Warehouse Stock Tracker</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>The Warehouse Stock Tracker is a web-based application designed specifically for C.I.M Biomedical, a company specializing in the storage and management of medicines.</p>
 									<ul class="actions">
 										<li><a href="CIM.html" class="button">Learn more</a></li>
 									</ul>
